Got working and deployment on heroku

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Spotify Song HistoryTracker</title>
+    <title>Spotify Song History Tracker</title>
 </head>
 <body>
-    <h1>Spotify Song HistoryTracker</h1>
-    <p>Spotify only lets users retrive last 50 song played. This api will keep a reocrd of all your songs played</p>
+    <h1>Spotify Song History Tracker</h1>
+    <p>Spotify only lets users retrive last 50 song played. This api will keep a record of all your songs played</p>
     <form  action="/new_user" method="post">
     <input type="submit">
     </form>
