--- a/templates/songs.html
+++ b/templates/songs.html
@@ -6,30 +6,53 @@
     <link href="https://unpkg.com/tailwindcss@1.2.0/dist/tailwind.min.css" rel="stylesheet">
 
 </head>
-<body>
-<div class="flex items-center justify-center" style="background: #edf2f7;">
-    <div class="md:px-32 py-8 w-3/5">
-  <div class="shadow overflow-hidden rounded border-b border-gray-200">
-    <table class=" table-auto min-w-full bg-white">
-      <thead class="bg-gray-800 text-white">
-        <tr>
-          <th class="w-1/5 text-left py-3 px-4 uppercase font-semibold text-sm"></th>
-          <th class="w-2/5 text-left py-3 px-4 uppercase font-semibold text-sm">Song</th>
-          <th class="w-2/5 text-left py-3 px-4 uppercase font-semibold text-sm">Played At</th>
-        </tr>
-      </thead>
-    <tbody class="text-gray-700">
-    {% for song in songs %}
-      <tr class='{{"bg-gray-100" if loop.index % 2 == 1 else ""}}'>
-        <td class="w-1/5  text-center py-3 px-4">{{loop.index}}</td>
-        <td class="w-2/5 text-left py-3 px-4">{{song["name"]}}</td>
-        <td class="w-2/5 text-left py-3 px-4">{{song["played_at"]}} UTC</td>
-      </tr>
-    {% endfor %}
-    </tbody>
-    </table>
-  </div>
-</div>
-</div>
+<body class="bg-blue-100" >
+<div class="flex items-center justify-center">
+	<div class="container">
+		<table class="w-full flex flex-row flex-no-wrap sm:bg-white rounded-lg overflow-hidden sm:shadow-lg my-5">
+			<thead class="text-white">
+				<tr class="bg-gray-800 flex flex-col flex-no wrap sm:table-row rounded-l-lg sm:rounded-none mb-2 sm:mb-0">
+					<th class="p-3 text-left" width="110px"></th>
+					<th class="p-3 text-left">Songs</th>
+					<th class="p-3 text-left">Played At</th>
+				</tr>
+			</thead>
+			<tbody class="flex-1 sm:flex-none">
+			{% for song in songs %}
+				<tr class='flex flex-col flex-no wrap sm:table-row mb-2 sm:mb-0 {{"bg-gray-100" if loop.index % 2 == 1 else ""}}'>
+					<td class="border-grey-light border p-3 text-center ">{{loop.index}}</td>
+					<td class="border-grey-light border p-3">{{song["name"]}}</td>
+					<td class="border-grey-light border p-3 truncate">{{song["played_at"]}} UTC</td>
+				</tr>
+			{% endfor %}
+			</tbody>
+		</table>
+	</div>
+	</div>
 </body>
+
+<style>
+  html,
+  body {
+    height: 100%;
+  }
+
+  @media (min-width: 640px) {
+    table {
+      display: inline-table !important;
+    }
+
+    thead tr:not(:first-child) {
+      display: none;
+    }
+  }
+
+  td:not(:last-child) {
+    border-bottom: 0;
+  }
+
+  th:not(:last-child) {
+    border-bottom: 2px solid rgba(0, 0, 0, .1);
+  }
+</style>
 </html>
