--- a/templates/successful.html
+++ b/templates/successful.html
@@ -2,14 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sucesseful</title>
+    <title>Successful</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/tailwindcss@1.2.0/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Successfully Registered</h1>
-    <p>Congratulations {{name}} You songs are being tracked, the song tracking beung on {{time}} with {{song}}</p>
-    <p>Here is your unique id to use to get a list of your songs</p>
-    <p><strong>{{id}}</strong></p>
+<div class="min-w-screen min-h-screen bg-blue-100 flex items-center p-5 lg:p-20 overflow-hidden relative">
+    <div class="flex-1 min-h-full min-w-full rounded-3xl bg-white shadow-xl p-10 lg:p-20 text-gray-800 relative md:flex items-center text-center md:text-left">
+        <div class="w-full md:w-1/2">
+            <div class="mb-10 md:mb-20 text-gray-600 font-light">
+                <h1 class="font-black uppercase text-3xl lg:text-5xl text-green-500 mb-10">Successfully Registered</h1>
+                <p>Congratulations <strong>{{name}}</strong> Your songs are being tracked !</p>
+                <p>Yours spotify history gets updated every 6 hours so check back then to see you history.</p>
+            </div>
+        </div>
+        <div class="w-full md:w-1/2 text-center">
 
+        </div>
 
 </body>
 </html>
